#+title: Changelog
#+author: Boris Buliga

All notable changes to this project will be documented in this file.

The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]], and this project adheres to [[https://semver.org/spec/v2.0.0.html][Semantic Versioning]].

* Unreleased

** Fixed

- =vui-table= now respects =:indent= from parent =vui-vstack=. Previously, only the first line of a table was indented; now all lines are properly indented.

* v1.0.0-rc.2 - 2025-12-12

** Changed

- =vui-list= now returns =vstack= (for vertical, default) or =hstack= (for horizontal) instead of a fragment. This ensures proper indent propagation when nested inside layout containers.

** Added

- =:indent= and =:spacing= options for =vui-list=.
- Optional docstring support in =defcomponent= macro.
- =:no-decoration= option for =vui-button= to render without brackets.
- =:help-echo= option for =vui-button= to control tooltip. Setting to =nil= disables tooltip generation, providing ~2x faster button creation for bulk rendering.

** Fixed

- Propagate indent through =hstack= to nested =vstack=. When a =vstack= was nested inside an =hstack=, the indent context from parent =vstacks= was lost, causing subsequent lines to render without proper indentation.
- Accumulate indent correctly in nested =vstacks=.
- Components that render to =nil= no longer affect =vstack= / =hstack= spacing. Previously, a component returning =nil= (e.g., =(when condition (vui-text "..."))=) would still cause separator newlines/spaces to be inserted, resulting in extra blank lines or spaces in the output.

* v1.0.0-rc.1 - 2025-12-03

Initial release candidate.

** Added

- Core rendering engine with virtual DOM diffing and reconciliation.
- Component system with =defcomponent= macro.
- Hooks: =use-state=, =use-effect=, =use-memo=, =use-ref=, =use-async=.
- Layout primitives: =vui-vstack=, =vui-hstack=, =vui-box=, =vui-table=.